# BMS_Firmware

./: .gitignore  README.md  fw.pkg
bootloader/: README.md
bootloader/include/: bl_config.h
bootloader/src/: bl_jump.c  bl_jump.h  bl_validate.c  bl_validate.h  main.c
build_firmware/: .ninja_deps  .ninja_log  CMakeCache.txt  bms_firmware.elf  build.ninja  cmake_install.cmake  firmware.hex  firmware.map
build_tests/: run_tests.sh  test_balance  test_bms_outputs  test_bootloader_validate  test_config_masks  test_config_validate  test_faults  test_flash_layout  test_flash_layout.err  test_pec15  test_protocol_crc
docs/: 00_system_purpose.md  01_hardware_contract.md  02_safety_model.md  03_firmware_architecture.md  04_protocol_contract.md  05_config_schema.md  06_flash_and_bootloader.md  07_desktop_tool_design.md  08_validation_plan.md  bench_safety_checklist.md  first_flash_guide.md
firmware/: CMakeLists.txt  README.md
firmware/cmake/: arm_none_eabi.cmake
firmware/include/: bms_constants.h  bms_protocol_ids.h  bms_types.h
firmware/linker/: stm32f303vc_bms.ld
firmware/src/: bms_main_loop.c  bms_main_loop.h  main.c
firmware/src/bms/: bms_balance.c  bms_balance.h  bms_can.c  bms_can.h  bms_config.c  bms_config.h  bms_diagnostics.c  bms_diagnostics.h  bms_faults.c  bms_faults.h  bms_measurements.c  bms_measurements.h  bms_outputs.c  bms_outputs.h  bms_protocol.c  bms_protocol.h  bms_state.c  bms_state.h
firmware/src/board/: bms_hal.h  board_adc.c  board_adc.h  board_can.c  board_can.h  board_clock.c  board_clock.h  board_flash.c  board_flash.h  board_i2c.c  board_i2c.h  board_outputs.c  board_outputs.h  board_pins.h  board_spi.c  board_spi.h  board_uart.c  board_uart.h  stm32f303xc.h
firmware/src/drivers/: isl28022.c  isl28022.h  isospi.c  isospi.h  ltc6812.c  ltc6812.h
firmware/startup/: startup_stm32f303vc.s
protocol/: capabilities.yaml  config_schema.yaml  fault_bits.yaml  firmware_package.yaml  packet_ids.yaml
scripts/: build_firmware.sh  check_flash_layout.py  flash_stlink.sh  generate_protocol.py
tests/: CMakeLists.txt  README.md
tests/mock_bsp/: mock_board_clock.c  mock_board_flash.c  mock_board_outputs.c  mock_board_spi.c  mock_board_spi.h  mock_board_uart.c  mock_protocol_deps.c
tests/unit/: test_balance.c  test_bms_outputs.c  test_bootloader_validate.c  test_config_masks.c  test_config_validate.c  test_faults.c  test_flash_layout.c  test_pec15.c  test_protocol_crc.c
tool/: README.md  requirements.txt
tool/src/: __init__.py
tool/src/cli/: bmsctl.py
tool/src/config/: schema.py  validator.py
tool/src/connection/: device_state.py
tool/src/core/: target_model.py
tool/src/fake_target/: __init__.py  fake_target.py
tool/src/gui/: style.py
tool/src/gui/pages/: bringup.py  cells.py  config.py  connection.py  (+4 more)
tool/src/protocol/: client.py  crc.py  framing.py  packet_defs.py
tool/src/update/: package_builder.py  package_parser.py
tool/tests/: test_bringup_cli.py  test_config_validator.py  test_crc.py  test_diagnostics_and_modes.py  test_fake_target.py  test_framing.py  test_package_parser.py
